kubernetes-manifests/Istio/Virtual-Service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-http-virtualservice
spec:
  hosts:
    - "*"
  gateways:
    - sheetwise-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: backend-nodejs-service.default.svc.cluster.local
            port:
              number: 3000
