kubernetes-manifests/Istio/Virutal-service-ws.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sheetwise-ws-virtualService
spec:
  hosts:
    - "*"
  gateways:
    - sheetwise-gateway
  http:
    - match:
        - uri:
            prefix: /ws
      route:
        - destination:
            host: backend-ws.default.svc.cluster.local
            port:
              number: 8080
